--- a/fireworks.html
+++ b/fireworks.html
@@ -5,14 +5,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <style type="text/css">
+    body {
+      margin: 0;
+      text-align: center;
+    } 
     canvas {
+      /* width: 500px;
+      height: 500px; */
       border: 1px solid black;
     }
   </style>
 </head>
 <body>
-  <canvas>
-    
-  </canvas>
+  <canvas></canvas>
+  <script src="fireworks.js" type="text/javascript"></script>
 </body>
 </html>
