--- a/fireworks.html
+++ b/fireworks.html
@@ -6,6 +6,7 @@
   <title>Document</title>
   <style type="text/css">
     body {
+      position: relative;
       margin: 0;
       text-align: center;
     } 
@@ -14,10 +15,19 @@
       height: 500px; */
       border: 1px solid black;
     }
+    button {
+      position: absolute;
+      display: block;
+      top: 20px;
+      left: 100px;
+      height: 40px;
+      width: 100px;
+    }
   </style>
 </head>
 <body>
   <canvas></canvas>
+  <button>123</button>
   <script src="fireworks.js" type="text/javascript"></script>
 </body>
 </html>
