--- a/fireworks.html
+++ b/fireworks.html
@@ -19,9 +19,12 @@
       position: absolute;
       display: block;
       top: 20px;
-      left: 100px;
-      height: 40px;
-      width: 100px;
+      left: 950px;
+      height: 36px;
+      width: 88px;
+      border-radius: 2px;
+      background: black;
+      color: white;
     }
   </style>
 </head>
