--- a/fireworks.html
+++ b/fireworks.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <canvas></canvas>
-  <button>123</button>
+  <button>ПУСК</button>
   <script src="fireworks.js" type="text/javascript"></script>
 </body>
 </html>
