--- a/fireworks.html
+++ b/fireworks.html
@@ -19,7 +19,7 @@
       position: absolute;
       display: block;
       top: 20px;
-      left: 950px;
+      left: calc(50% + 370px);
       height: 36px;
       width: 88px;
       border-radius: 2px;
