--- a/fireworks.html
+++ b/fireworks.html
@@ -18,8 +18,8 @@
     button {
       position: absolute;
       display: block;
-      top: 20px;
-      left: calc(50% + 370px);
+      top: 80vh;
+      left: calc(50vw - 44px);
       height: 36px;
       width: 88px;
       border-radius: 2px;
