убрал ненужный код

--- a/fireworks.html
+++ b/fireworks.html
@@ -9,12 +9,8 @@
       position: relative;
       margin: 0;
       text-align: center;
+      background: black;
     } 
-    canvas {
-      /* width: 500px;
-      height: 500px; */
-      border: 1px solid black;
-    }
     img {
       height: 98%;
     }
