--- a/fireworks.html
+++ b/fireworks.html
@@ -41,7 +41,7 @@
 </head>
 <body>
   <canvas></canvas>
-  <button><img src="fireworks.svg" /></button>
+  <button><img src="svg/fireworks.svg" alt="launch fireworks"></button>
   <script src="fireworks.js" type="text/javascript"></script>
 </body>
 </html>
