--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
 <body>
   <canvas></canvas>
   <button>PUSH</button>
-  <script src="js/fireworks.js" type="text/javascript"></script>
+  <script src="fireworks.js" type="text/javascript"></script>
 </body>
 </html>
