bpm, overflow-hidden

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     body {
       position: relative;
       margin: 0;
+      padding: 0;
       text-align: center;
       background: black;
+      overflow: hidden;
     } 
     img {
       height: 98%;
