--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       background: #f5f5f5;
       color: black;
       border: none;
+      transition: all .05s ease;
     }
     button:hover {
       transform: translateY(-1px);
